# creditmate-ai-be

./: .bandit  .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  API_DOCUMENTATION.md  CLAUDE.md  CRAWLER_README.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  Pipfile  README.md  REFACTORING_SUMMARY.md  SETUP_TASKS.md  all_banks.json  conftest.py  django-testing-guide.md  docker-compose.dev.yml  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  railway.json  railway.toml  test_basic.py
.claude/: settings.local.json
.github/workflows/: code-quality.yml  deployment.yml  migrations.yml  security.yml  tests.yml
api_docs/: banks_api.md  credit_cards_api.md
banks/: admin.py  api_docs.md  enums.py  exceptions.py  factories.py  models.py  services.py  tasks.py  validators.py
banks/api/: filters.py  serializers.py  urls.py  views.py
banks/migrations/: 0001_initial.py  0002_rename_created_at_bank_created_and_more.py  0003_remove_bank_card_info_urls_bankdatasource_and_more.py  0004_make_parsed_json_nullable.py  0005_bank_schedule_charge_url.py  0006_bankdatasource_last_verified_at.py  0007_crawledcontent_content_hash.py  0008_crawledcontent_parsed_json_raw.py  0009_alter_crawledcontent_options_and_more.py  0010_add_sync_timestamps_to_crawled_content.py
banks/services/: __init__.py  bank_data_crawler.py  content_extractor.py  credit_card_data_service.py  llm_parser.py  schedule_charge_finder.py
banks/tests/: test_api.py  test_api_security.py  test_integration.py  test_models.py  test_monthly_tasks.py  test_services.py  test_services_pytest.py  test_tasks.py  (+2 more)
common/: api_examples.md  models.py
credit_cards/: admin.py  api_docs.md  factories.py  models.py
credit_mate_ai/: __init__.py  asgi.py  celery.py  settings.py  urls.py  views.py  wsgi.py
docs/: COMMAND_FLOWS.md  EMAIL_CONFIGURATION.md  README.md  improvements.md
terraform/: README.md  main.tf  terraform.tfvars.example  variables.tf
(+31 files in other folders)
