[project]
name = "credit-mate-ai"
version = "0.1.0"
description = "AI-powered credit card discovery platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django~=5.2.3",
    "pytest~=8.4.0",
    "pytest-django~=4.11.1",
    "djangorestframework~=3.16.0",
    "pytest-socket~=0.7.0",
    "pytest-cov~=6.0.0",
    "django-filter~=25.1",
    "factory-boy~=3.3.3",
    "celery~=5.5.3",
    "redis~=6.2.0",
    "requests~=2.32.4",
    "python-magic~=0.4.27",
    "pandas~=2.3.0",
    "urllib3",
    "django-cors-headers~=4.6.0",
    "gunicorn~=23.0.0",
    "psycopg2-binary~=2.9.9",
    "dj-database-url",
    "python-dotenv",
    "google-generativeai",
    "beautifulsoup4",
    "pytesseract",
    "pillow",
    "pymupdf",
    "openai",
    "pypdf",
    "whitenoise",
]

[dependency-groups]
dev = [
    "black~=24.10.0",
    "flake8~=7.1.1",
    "isort~=5.13.2",
    "pre-commit~=4.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["credit_mate_ai", "banks", "credit_cards", "common"]

[tool.black]
line-length = 90
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.idea
  | \.git
  | \.pytest_cache
  | \.venv
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 90
known_django = "django"
known_first_party = "credit_mate_ai"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "DJANGO", "FIRSTPARTY", "LOCALFOLDER"]
skip = ["migrations"]
skip_glob = [".venv/*", "venv/*", "env/*", ".env/*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "credit_mate_ai.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "--tb=short --strict-markers"
testpaths = ["."]

[tool.bandit]
exclude_dirs = [
  ".git",
  ".github",
  ".venv",
  "__pycache__",
  "tests",
  "scripts",
  "factories.py"
]
